--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build React App
         run: |
-          cd react-app  # Replace with the actual path to your React app
+          cd monolith  # Replace with the actual path to your React app
           npm install
           npm run build
 
@@ -36,6 +36,6 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          cd react-app  # Replace with the actual path to your React app
+          cd monolith  # Replace with the actual path to your React app
           docker build -t ${{ secrets.DOCKER_USERNAME }}/react-app-image:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/react-app-image:latest
